--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.filerenamer</groupId>
-    <artifactId>filerenamer</artifactId>
-    <version>1.0.3-SNAPSHOT</version>
+    <groupId>com.filetool</groupId>
+    <artifactId>filetool</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>filerenamer</name>
-    <description>Import blueant csv exports into toggl</description>
+    <name>filetool</name>
+    <description>Work with image files</description>
 
 
     <properties>
@@ -62,7 +62,7 @@
                 <configuration>
                     <archive>
                         <manifestEntries>
-                            <Main-Class>com.filerenamer.FileRenamer</Main-Class>
+                            <Main-Class>com.FileTool</Main-Class>
                         </manifestEntries>
                     </archive>
                 </configuration>
@@ -84,7 +84,7 @@
                             <archive>
                                 <manifest>
                                     <addClasspath>true</addClasspath>
-                                    <mainClass>com.filerenamer.FileRenamer</mainClass>
+                                    <mainClass>com.FileTool</mainClass>
                                 </manifest>
                             </archive>
                         </configuration>
